--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Odin HomePage</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -72,7 +73,7 @@
       </div>
 
       <div class="action-section">
-        <button type="submit">Create Account</button>
+        <button type="submit" id="submit-button">Create Account</button>
         <p>Already have an account? <a href="#">Log in</a></p>
       </div>
     </div>
